--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 </div> -->
 
                 <div class="main-header__copy__text">
-                    <p>El objetivo de éste portafolio es mostrar a detalle todo lo realizado en el curso de Innovación e Investigación Tecnológica. Aplicando diversas metodologías y técnicas de estudio para la elaboración de los distintos proyectos presentados.</p>
+                    <p>el objetico de esta pagina es innovar la investigacion.</p>
                 </div>
             </div>
 
