--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <div class="main-header__copy__text">
                     <p>el objetico de esta pagina es innovar la investigacion.</p>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/B9c8TLzPMu0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    https://docs.google.com/document/d/e/2PACX-1vTYvGNNarW2E1w6hbiQajUAnnQDIQRg44xkyMupo_aJ7BCHw-TRrIHbabJrXWvGnQZK_Z6I6xOi20mq/pub
+                    <iframe src="https://docs.google.com/document/d/e/2PACX-1vTYvGNNarW2E1w6hbiQajUAnnQDIQRg44xkyMupo_aJ7BCHw-TRrIHbabJrXWvGnQZK_Z6I6xOi20mq/pub?embedded=true"height="400"width="560"></iframe>
                 </div>
             </div>
 
